fixed css so it uses flex wrap for content

--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,20 @@ body {
 header {
   display: flex;
   margin-top: 2.5%;
-  margin-left: 2.5%;
   margin-bottom: 2.5%;
+  padding-bottom: 2.5%;
   border-bottom: black 1px solid;
   justify-content: space-between;
 }
 
-nav {
+header img {
+  margin-left: 2.5%;
+}
 
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 li {
@@ -20,7 +26,6 @@ li {
   padding: 25px;
   font-size: larger;
   right: 0px;
-  /* float: left; */
   justify-content: end;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -35,7 +40,10 @@ a:hover {
 }
 
 section {
-  width: 100%;
+  /* width: 100%; */
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
 }
 
 section:nth-child(1) {
@@ -49,8 +57,11 @@ section:nth-child(2) {
 }
 
 section:nth-child(2) img{
-  /* display: flex; */
   margin-right: 30px;
+}
+
+section:nth-child(2) img:nth-child(3){
+  margin-right: 0px;
 }
 
 section:nth-child(3) {
@@ -58,15 +69,19 @@ section:nth-child(3) {
   margin: 2.5%;
 }
 
+section:nth-child(3) img{
+  /* margin-right: 30px; */
+  /* margin-left: 2.5%; */
+}
+
 section:nth-child(3) article {
-  width: 480px;
-  margin-left: 2.5%;
+  width: 460px;
+  margin-left: 20px;
   text-align: justify;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-
 }
 section:nth-child(3) h1 {
 
@@ -81,9 +96,11 @@ section:nth-child(3) button {
 }
 
 h1 {
+  font-size: x-large;
   text-align: center;
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  margin-left: 2.5%;;
+  margin-left: 2.5%;
+  padding: 25px;
 }
 
 table {
@@ -92,11 +109,13 @@ table {
   background-color: aliceblue;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   margin-left: 2.5%;;
+  border-collapse:inherit;
 }
 
 th {
   padding: 5px;
   text-decoration: underline;
+  font-weight: bold;
 }
 td {
   padding: 10px;
@@ -105,4 +124,8 @@ td {
 footer {
   background-color: slategray;
   padding: 25px;
+  display: flex;
+  margin-top: 2.5%;
+  border-top: black 1px solid;
+  justify-content: space-between;
 }
